--- a/yummy/template/about.pug
+++ b/yummy/template/about.pug
@@ -40,59 +40,59 @@ section.section_1.container-fluid
           | về chúng tôi
         p.content.text-center Với các đầu bếp hàng đầu thế giới, chúng tôi đã tạo ra những “tác phẩm nghệ thuật” !
         .row.about_content.container-fluid
-            .col-6
-                p.content_left Uisque volutpat pharetra felis, eu cursus lorem molestie vitae ulla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui ut cus libero augue at libero. Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.
-            .col-6
-                p.content_right Uisque volutpat pharetra felis, eu cursus lorem molestie vitae ulla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui ut cus libero augue at libero. Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.
+            .col-sm-6
+                p.content_left Ẩm thực nơi đây là sự kết hợp hài hòa tinh tế giữa hương vị đặc sắc của những món ăn từ đất nước Mêhicô vui nhộn, đất nước Italy cổ kính và từ xứ sở tràn ngập nắng mặt trời của những chú Kangaroo. Đặc biệt, nhà hàng còn góp phần tăng thêm hương vị tuyệt vời cho những món ăn bằng những loại thức uống hấp dẫn như bia mát lạnh và những loại rượu vang ngon nức tiếng từ Úc & Nam Mỹ.
+            .col-sm-6
+                p.content_right Đến nhà hàng Yummy, thực khách sẽ nhớ mãi hương vị khó quên của món sườn khổng lồ nướng mềm phết sốt BBQ kiểu Mỹ. Món ăn này được mọi lứa tuổi đặc biệt yêu thích. Ngoài ra, nhà hàng còn mang đến thực đơn phong phú và hợp lý về giá cả, không những phù hợp cho khách nước ngoài mà còn được các bạn trẻ Việt Nam vô cùng hâm mộ và ủng hộ nhiệt tình.
     .child-page-listing
       .grid-container
         article#3685.location-listing
           a.location-title(href='#')
-            | Name Chef
+            | Mokey.D.Luffy
           .location-image
             a(href='#')
               img(width='300' height='169' src='./images/about_Page/chef1.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Name Chef
+            | Zoro
           .location-image
             a(href='#')
               img(width='300' height='169' src='./images/about_Page/chef2.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Name Chef
+            | Sanji
           .location-image
             a(href='#')
               img(width='300' height='169' src='./images/about_Page/chef3.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Name Chef
+            | Nami
           .location-image
             a(href='#')
               img(width='300' height='169' src='./images/about_Page/chef2.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Name Chef
+            | Uppsop
           .location-image
             a(href='#')
               img(width='300' height='169' src='./images/about_Page/chef3.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Name Chef
+            | Franky
           .location-image
             a(href='#')
               img(width='300' height='169' src='./images/about_Page/chef4.jpg' alt='Name Chef')
 
 section.section_2.container-fluid
     div
-       p.content.text-center Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. 
+       p.content.text-center Với không gian thoải mái, thân thiện, sự phục vụ nhiệt tình chuyên nghiệp, Yummy chính là sự lựa chọn tuyệt vời giúp bạn thư giãn nhẹ nhàng sau những giờ phút hối hả và bận rộn của cuộc sống hàng ngày. 
 
 section.section_3.container-fluid
     div
         p.heading.text-center 
           span(style='color:#FD5B00;') Bài viết 
           | của chúng tôi
-        p.content.text-center Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Nulla semper arcu vel diam auctor. condimentum.
+        p.content.text-center Hy vọng bài viết của chúng tôi sẽ giúp bạn có được gợi ý về không gian nhà hàng lý tưởng cho buổi hẹn hay dịp tổ chức tiệc đặc biệt sắp tới. Đừng quên chia sẻ cảm nhận của bạn khi đến với nhà hàng Yummy cùng chúng tôi nhé!
     hr
     div.post
         p.post_tag.text-center CÔNG THỨC NẤU ĂN
@@ -101,7 +101,7 @@ section.section_3.container-fluid
         div.post_image.text-center
           img(src='./images/about_Page/blog_post.png' alt='image')
         div
-            p.post_content Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.
+            p.post_content Mấy năm gần đây, nấm trở thành một món ăn được người tiêu dùng ưa thích do "độ sạch" và "độ dinh dưỡng" cao của sản phẩm. Chỉ cần gia giảm một chút nguyên liệu hoặc gia vị từ những công thức này, bạn còn có thể chế biến thành những món ăn chay tuyệt hảo.
             p.post_detail Xem thêm ...
         hr
     div.text-center.btn_detail
@@ -120,28 +120,28 @@ section.section_4.container-fluid
       li(data-target='#carouselExampleIndicators' data-slide-to='2')
     .carousel-inner
       .carousel-item.active
-        p.content.text-center Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Nulla semper arcu vel diam auctor. condimentum. Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Nulla semper arcu vel diam auctor. condimentum.
+        p.content.text-center Tinh thần, thái độ của anh chị em nhân viên nhà hàng hết sức nhiệt tình, rất tốt và chu đáo, anh Minh giám đốc cũng hết sức tận tình với khách hàng. Thức ăn đảm bảo an toàn thực phẩm, các món ăn ngon và đầy đặn, hình thức trang trí cũng rất đẹp.
         .reviewers.row
           .col-4.avatar
             img(src='./images/about_Page/reviewer1.jpg') 
           .col-8.name_reviewers
-            p.name Suni Hạnh Linh
+            p.name Suni Hạ Linh
             p.role Ca sỹ
       .carousel-item
-        p.content.text-center Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Nulla semper arcu vel diam auctor. condimentum. Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Nulla semper arcu vel diam auctor. condimentum.
+        p.content.text-center Tinh thần, thái độ của anh chị em nhân viên nhà hàng hết sức nhiệt tình, rất tốt và chu đáo, anh Minh giám đốc cũng hết sức tận tình với khách hàng. Thức ăn đảm bảo an toàn thực phẩm, các món ăn ngon và đầy đặn, hình thức trang trí cũng rất đẹp.
         .reviewers.row
           .col-4.avatar
             img(src='./images/about_Page/reviewer1.jpg') 
           .col-8.name_reviewers
-            p.name Suni Hạnh Linh
+            p.name Suni Hạ Linh
             p.role Ca sỹ
       .carousel-item
-        p.content.text-center Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Nulla semper arcu vel diam auctor. condimentum. Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Nulla semper arcu vel diam auctor. condimentum.
+        p.content.text-center Tinh thần, thái độ của anh chị em nhân viên nhà hàng hết sức nhiệt tình, rất tốt và chu đáo, anh Minh giám đốc cũng hết sức tận tình với khách hàng. Thức ăn đảm bảo an toàn thực phẩm, các món ăn ngon và đầy đặn, hình thức trang trí cũng rất đẹp.
         .reviewers.row
           .col-4.avatar
             img(src='./images/about_Page/reviewer1.jpg') 
           .col-8.name_reviewers
-            p.name Suni Hạnh Linh
+            p.name Suni Hạ Linh
             p.role Ca sỹ
 
 //footer
