--- a/yummy/template/menu.pug
+++ b/yummy/template/menu.pug
@@ -40,21 +40,34 @@ section.section_1.container-fluid
         span(style='color:#FD5B00;') Thực đơn 
         | Bữa sáng
       p.sub_title Tất cả các ngày trong tuần 6h30-10h30
-      div.dish
-        p.dish_name Trứng tráng rau củ
-        p.dish_info Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND
-      div.dish
-        p.dish_name Trứng tráng rau củ
-        p.dish_info Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND
-      div.dish
-        p.dish_name Trứng tráng rau củ
-        p.dish_info Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND
-      div.dish
-        p.dish_name Trứng tráng rau củ
-        p.dish_info Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND
-      div.dish
-        p.dish_name Trứng tráng rau củ
-        p.dish_info Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND
+      ul.leaders
+          li
+            span.dish_name Bít tết bò Kobe
+            span.dish_info 150.000VND
+          li
+            span.dish_name Gà nướng ngũ vị hương
+            span.dish_info 150.000VND
+          li
+            span.dish_name Gà cay phô mai
+            span.dish_info 150.000VND
+          li
+            span.dish_name Trứng tráng rau củ
+            span.dish_info 150.000VND
+          li
+            span.dish_name Sừng trâu hầm nhân sâm
+            span.dish_info 100.000VND
+          li
+            span.dish_name Bánh mì ốp trứng cút
+            span.dish_info 100.000VND
+          li
+            span.dish_name Pate Italy
+            span.dish_info 100.000VND
+          li
+            span.dish_name Sườn sốt me
+            span.dish_info 100.000VND
+          li
+            span.dish_name Châu chấu chiên tỏi ớt
+            span.dish_info 100.000VND
     .col-5.select_menu
       .row.select
         .col-3.image
