--- a/yummy/template/shop.pug
+++ b/yummy/template/shop.pug
@@ -39,14 +39,15 @@ section.section_1.container-fluid
   .set_food
     .row.set_food_area
       .col-6.image_set 
-        img(src="./images/shop_Page/set1.jpg", alt="")
+        
       .col-6.set_content
         div.text_content
           p.set_price.text-center 199.000 vnd
           hr
           p.set_name.text-center COMBO TÌNH YÊU
           p.sub_set.text-center 2 bánh mỳ, 2 set trái cây 4 mùa, 2 trà trái cây
-
+          div.text-center.btn_detail
+            button.btn(type='button') Mua ngay
 section.section_2.container-fluid
 
   .top_section_2
@@ -61,7 +62,7 @@ section.section_2.container-fluid
         input#myInput.form-control(type='text' placeholder='Tìm kiếm..')       
   .card_main
     .card-deck.row
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp5.jpg' alt='Card image cap')
@@ -78,7 +79,7 @@ section.section_2.container-fluid
               hr
             p.card-text.price.text-center
               | 50.000 VND
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp1.jpg' alt='Card image cap')
@@ -95,7 +96,7 @@ section.section_2.container-fluid
               hr
             p.card-text.price.text-center
               | 50.000 VND
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp2.jpg' alt='Card image cap')
@@ -112,7 +113,7 @@ section.section_2.container-fluid
               hr
             p.card-text.price.text-center
               | 50.000 VND
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp3.jpg' alt='Card image cap')
@@ -129,7 +130,7 @@ section.section_2.container-fluid
               hr
             p.card-text.price.text-center
               | 50.000 VND
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp4.jpg' alt='Card image cap')
@@ -146,7 +147,7 @@ section.section_2.container-fluid
               hr
             p.card-text.price.text-center
               | 50.000 VND
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp6.jpg' alt='Card image cap')
@@ -163,7 +164,7 @@ section.section_2.container-fluid
               hr
             p.card-text.price.text-center
               | 50.000 VND
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp7.jpg' alt='Card image cap')
@@ -180,7 +181,7 @@ section.section_2.container-fluid
               hr
             p.card-text.price.text-center
               | 50.000 VND
-      .col-3       
+      .col-md-4.col-lg-3.col-sm-6       
         .card
           .hover_area
             img.card-img-top(src='./images/shop_Page/sp8.jpg' alt='Card image cap')
