--- a/yummy/template/template-parts/footer.pug
+++ b/yummy/template/template-parts/footer.pug
@@ -19,7 +19,7 @@ footer.container-fuild
         .text-center 
           button.btn(type='submit') Gửi tin nhắn
     .footer_main.container-fluid.row
-      .col-3.bottom_left.text-center
+      .col-sm-3.bottom_left.text-center
         .logo Yummy
         .top_social_bar
             a(href='#')
@@ -32,8 +32,8 @@ footer.container-fuild
               i.fab.fa-skype(aria-hidden='true')
             a(href='#')
               i.fab.fa-dribbble(aria-hidden='true')
-      .col-6
-      .col-3.bottom_right.text-left
+      .col-sm-6
+      .col-sm-3.bottom_right.text-left
         .address 
           i.fas.fa-map-marker-alt 
           | Tây Hồ Hà Nội
