--- a/yummy/css/about.css
+++ b/yummy/css/about.css
@@ -136,8 +136,7 @@
 }
 
 .section_2 .content{
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+    padding: 5rem;
     font-family: 'Dancing Script', cursive;
     font-size: 4.8rem;
     color: #FD5B00;
@@ -179,7 +178,7 @@
 }
 .post_image{
     margin-top: 3rem;
-    height: 500px;
+    height: auto;
     width: auto;
 }
 .post_content {
@@ -267,3 +266,72 @@
   right: 0;
 }
 
+@media only screen and (min-width: 1900px) {
+  .reviewers{
+    margin-left: 80rem;
+    margin-right: 65rem; 
+    padding-bottom: 10rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .header_area {
+      background-image: url("../images/about_Page/banner.png");
+      height: auto; 
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding: 0;
+  }
+  .header_main{
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+      font-family: 'Fredericka the Great', cursive;
+      font-size: 15rem;
+      color: #ffffff;
+      line-height: 10rem;
+  }
+  .heading{
+    padding-top: 5rem;
+  } 
+  .about_content{
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+    padding-left: 5rem;
+  }
+  .content_left{
+    padding-left: 2rem;
+    padding-right: 1rem;
+  }
+  .content_right{
+    padding-left: 2rem;
+    padding-right: 1rem;
+  }
+  .section_3 .content{
+    color: #000000;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    padding-bottom: 5rem;
+  }
+  .post{
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+
+  /* section 4 */
+  .reviewers{
+    margin-left: 22rem;
+    margin-right: 10rem; 
+    padding-bottom: 10rem;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  /* section 4 */
+  .reviewers{
+    margin-left: 18rem;
+    margin-right: 0rem; 
+    padding-bottom: 10rem;
+  }
+}
