--- a/yummy/css/blog.css
+++ b/yummy/css/blog.css
@@ -98,7 +98,7 @@
 }
 .post_image{
       margin-top: 3rem;
-      height: 500px;
+      height: auto;
       width: auto;
 }
 .post_content {
@@ -127,4 +127,79 @@
     font-size: 2.4rem;
     font-family: 'Poppins', sans-serif; 
     color: #ffffff;
+}
+
+@media only screen and (min-width: 1800px) {
+    .form-inline{
+        background-color: #4C5B7C;
+        height: 4rem;
+        margin-left: 100rem;
+    }
+}
+@media only screen and (max-width: 1100px) {
+    .form-inline{
+        background-color: #4C5B7C;
+        height: 4rem;
+        margin-left: 40rem;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .form-inline{
+        background-color: #4C5B7C;
+        height: 4rem;
+        margin-left: 35rem;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .header_area {
+        background-image: url("../images/blog_Page/banner.png");
+        height: auto; 
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+    }
+    .header_main{
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        font-family: 'Fredericka the Great', cursive;
+        font-size: 15rem;
+        color: #ffffff;
+        line-height: 10rem;
+    }
+    /* menu blog */
+
+    .menu_blog .nav-item{
+        padding-left: 2rem;
+        padding-top: 0.8rem; 
+    }
+
+    .form-inline{
+        background-color: #4C5B7C;
+        height: 4rem;
+        margin-left: 5rem;
+    }
+    /* search */
+    .navbar-nav li .search-box {
+        font-family: 'Prata', serif;
+        font-size: 1.2rem;
+        height: 100%;
+        margin-top: none;
+        background-color: #4C5B7C;
+        border: none;
+        color: white;
+        border-radius: 0;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-bottom: none;
+    }
+
+
+
+
+    .post{
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
 }
