--- a/yummy/template/blog.pug
+++ b/yummy/template/blog.pug
@@ -34,7 +34,7 @@ header.header_area.container-fluid
     .content_header _~ Blog ~_
 // Navbar
 .menu_blog
-  nav.navbar.navbar-expand-lg.navbar-light
+  nav.navbar.navbar-expand.navbar-light
     //- a.navbar-brand(href='#') YUMMY
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
@@ -55,23 +55,23 @@ header.header_area.container-fluid
 section.section_1.container-fluid
   div.post
     p.post_tag.text-center CÔNG THỨC NẤU ĂN
-    p.post_title.text-center BÀO NGƯ HẤP CHANH TÂY
+    p.post_title.text-center BÒ BÍT TẾT KOBE
     p.post_subtitle.text-center Ngày 8 /9/2018, by NhatMinh, 2 bình luận
     div.post_image.text-center
-      img(src='./images/about_Page/blog_post.png' alt='image')
+      img(src='./images/blog_Page/1.png' alt='image')
     div
-      p.post_content Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.
+      p.post_content Từng miếng bò bít tết ngon thơm mềm, nóng hổi, còn mọng nước, trông hấp dẫn làm sao. Không chỉ có vậy, Moo Beef Steak còn rất đa dạng các loại nước sốt ăn kèm với bò bít tết như: sốt phô mai xanh, sốt nấm, sốt tiêu đen, sốt vang đỏ hay sốt tiêu xanh,... có thể lựa chọn theo sở thích của mình.
       a(href="singerBlog.html")
         p.post_detail Xem chi tiết ...
     hr
   div.post
     p.post_tag.text-center CÔNG THỨC NẤU ĂN
-    p.post_title.text-center BÀO NGƯ HẤP CHANH TÂY
+    p.post_title.text-center TRAI LUỘC CHANH XẢ
     p.post_subtitle.text-center Ngày 8 /9/2018, by NhatMinh, 2 bình luận
     div.post_image.text-center
       img(src='./images/about_Page/blog_post.png' alt='image')
     div
-      p.post_content Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.
+      p.post_content Thịt trai là một khối cứng giòn, có mùi thơm ngon và rất bổ dưỡng, là một vị thuốc quý bởi vị mặn, tính bình, có tác dụng trong việc tăng khí, hạ nhiệt, bổ thận, chống suy nhược cơ thể. Bên cạnh đó còn có tác dụng bổ mắt, tráng dương, tăng cường sinh lực cho phái mạnh.
       p.post_detail Xem chi tiết ...
     hr
   div.text-center.btn_detail
