--- a/yummy/css/singerProduct.css
+++ b/yummy/css/singerProduct.css
@@ -271,3 +271,138 @@ textarea.form-control{
     color: #FD5B00;
 }
 
+@media only screen and (max-width: 576px) {
+    .header_area {
+        background-image: url("../images/singerProduct_Page/banner.png");
+        height: auto; 
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+    }
+
+    .product_area{
+        padding: 5rem;
+    }
+
+
+    /* phần bên phải */
+    .product_content_area{
+        padding-left: 2rem;
+    }
+    .btn{
+        background-color: #FD5B00;
+        color: #ffffff;
+        font-size: 1.4rem;
+        height: 3rem;
+        width: auto;
+        margin-left: 5rem;
+    }
+    .product_content_area hr{
+        margin: 1rem 0 1rem 0;
+    }
+    .slick-list{
+        padding: 0px!important;
+    }
+    .product_content_area p{
+        margin: 0!important;
+    }
+
+    /* section 2 */
+    .section_2{
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+    .vote span{
+        color: #FD5B00;
+    }
+    .comment{
+        font-family: 'Prata', serif;
+        font-size: 1.8rem;
+        padding-top: 0rem;
+        padding: 0;
+    }
+    .avatar_comter img{
+        width: 250%;
+        border-radius: 50rem;
+    }
+    
+
+    .hover_card i{
+        font-size: 10rem;
+        padding: 2rem;
+    }
+
+    /* hover */
+    .hover_card a{
+        padding: 0.5rem;
+        color: #FFFFFF;
+    }
+    .hover_card{
+        position: absolute;
+        left: 30%;
+        top: 20%;
+        opacity: 0;
+        display: block;
+    }
+    
+    .card:hover{
+        opacity: 1;
+    }
+    
+    /* hover styles */
+    .hover_area {
+        position: relative;
+      }
+      
+      .card-img-top {
+        line-height: 0;
+        overflow: hidden;
+      }
+      
+      .card-img-top img {
+        filter: blur(0px);
+        transition: filter 0.3s ease-in;
+        transform: scale(1.1);
+      }
+      
+      .hover_card {
+        font-size: 1.5em;
+        font-weight: bold;
+        text-decoration: none;
+        z-index: 1;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        transition: opacity .5s;
+        background: rgba(90,0,10,0.4);
+        color: white;
+        
+        /* position the text in t’ middle*/
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      .card:hover .hover_card {
+        opacity: 1;
+      }
+      
+      .card:hover .card-img-top img {
+        filter: blur(2px);
+      }
+      
+      
+      /* for touch screen devices */
+      @media (hover: none) { 
+        .hover_card {
+          opacity: 1;
+        }
+        .card-img-top img {
+          filter: blur(2px);
+        }
+      }
+}
