--- a/yummy/css/css_parts/footer2.css
+++ b/yummy/css/css_parts/footer2.css
@@ -78,8 +78,11 @@ h1{
     grid-template-columns: none;
 }
 .slick-next{
-    right: 0;
+  right: 0;
 }
+/* .slick-prev{
+  left: -10rem;
+} */
 /* css */
 
 .top_footer .title{
