--- a/yummy/template/singerProduct.pug
+++ b/yummy/template/singerProduct.pug
@@ -78,7 +78,7 @@ section.section_1.container-fluid
 section.section_2.container
   .comment BÌNH LUẬN
   hr
-  .row 
+  .row.comment_area
     .col-1.avatar_comter
       img(src="images/singerProduct_Page/sontung.png", alt="") 
     .col-11.form_comment
@@ -112,7 +112,7 @@ section.section_3.container
   .title SẢN PHẨM LIÊN QUAN
   hr
   .card-deck.row
-    .col-3       
+    .col-md-4.col-lg-3.col-sm-6       
       .card
         .hover_area
           img.card-img-top(src='./images/shop_Page/sp5.jpg' alt='Card image cap')
@@ -129,7 +129,7 @@ section.section_3.container
             hr
           p.card-text.price.text-center
             | 50.000 VND
-    .col-3       
+    .col-md-4.col-lg-3.col-sm-6       
       .card
         .hover_area
           img.card-img-top(src='./images/shop_Page/sp1.jpg' alt='Card image cap')
@@ -146,7 +146,7 @@ section.section_3.container
             hr
           p.card-text.price.text-center
             | 50.000 VND
-    .col-3       
+    .col-md-4.col-lg-3.col-sm-6       
       .card
         .hover_area
           img.card-img-top(src='./images/shop_Page/sp2.jpg' alt='Card image cap')
@@ -163,7 +163,7 @@ section.section_3.container
             hr
           p.card-text.price.text-center
             | 50.000 VND
-    .col-3       
+    .col-md-4.col-lg-3.col-sm-6       
       .card
         .hover_area
           img.card-img-top(src='./images/shop_Page/sp3.jpg' alt='Card image cap')
