--- a/yummy/css/index.css
+++ b/yummy/css/index.css
@@ -277,7 +277,7 @@
 }
 
 
-@media only screen and (max-width: 1900px) {
+@media only screen and (min-width: 1900px) {
     .grid-container {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
