--- a/yummy/css/cart.css
+++ b/yummy/css/cart.css
@@ -46,7 +46,11 @@
     /* padding-left: 20px; */
 }
 .cart-container table.cart .product-name a{
+    color: #FD5B00;
     font-size: 1.4rem;
+}
+.cart-container table.cart .product-name a:hover{
+    text-decoration: none;
 }
 .cart-container table.cart .product-quantity {
     width: 15%;
@@ -59,7 +63,7 @@
     /* padding-left: 20px; */
 }
 .quantity >input ,  .quantity >button  {
-    width: 30px;
+    width: 3rem;
     text-align: center
 }
 .product-remove button {
@@ -78,15 +82,15 @@
     font-weight: 500;
     font-family: 'Poppins', sans-serif;
     font-size: 1.4rem;
-    padding: 20px 0;
+    padding: 2rem 0;
     color: #000000;
     background: #F7F5EF;
     
 }
 .cart-container table.cart td {
     border-bottom: 1px solid #e7e7e7;
-    padding: 30px 0;
-    font-size: 14px;
+    padding: 3rem 0;
+    font-size: 1.4rem;
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -99,20 +103,23 @@
 }
 .cart-coupon, .cart-total, .payment-tabs {
     background: #fff;
-    padding: 30px;
+    padding: 3rem;
     border: 1px solid #e7e7e7;
 }
 .cart-coupon input {
     color: #777;
     border: 1px solid #ccc;
-    height: 40px;
+    height: 4rem;
     display: block;
     width: 100%;
-    padding: 0 15px;
-    margin: 25px 0 10px;
-    font-size: 16px;
+    padding: 0 1.5rem;
+    margin: 2.5rem 0 1rem;
+    font-size: 1.4rem;
 }
-
+/* giảm giá */
+.discount-rate{
+    padding-left: 2rem;
+}
 
 
 .title_total{
@@ -122,25 +129,48 @@
 .cart-total > table th {
     padding: 6px;
 }
-th, td{
+.cart-total th, td{
     font-weight: normal;
     font-family: 'Poppins', sans-serif !important;
     font-size: 1.8rem !important;
+    text-align: left;
+}
+.cart-total td{
+    font-weight: normal;
+    font-family: 'Poppins', sans-serif !important;
+    font-size: 1.8rem !important;
+    text-align: left;
+    padding-left: 5rem;
+}
+.cart-container th, td{
+    font-weight: normal;
+    font-family: 'Poppins', sans-serif !important;
+    font-size: 1.8rem !important;
+    text-align: center;
 }
 .cart-total > table .order-total .amount {
     font-weight: 700;
-    font-size: 22px;
-    color: #630005;
+    font-size: 2.2rem;
+    color: #FD5B00;
 }
 
-
+.actions{
+    text-align: left!important;
+}
 .actions a{
     font-size: 1.4rem;
+    color: #FD5B00;
+
+}
+.actions a:hover{
+    text-decoration: none;
 }
 
 .continue{
     padding-left: 5rem;
 }
+
+
 .cart_area{
     padding-bottom: 10rem;
 }
@@ -181,4 +211,24 @@ textarea.form-control{
     color: #ffffff;
     font-size: 1.8rem;
     margin-top: 2rem;
+}
+
+
+@media only screen and (max-width: 576px) {
+    .header_area {
+        background-image: url("../images/singerProduct_Page/banner.png");
+        height: auto; 
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+    }
+    .header_main{
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        font-family: 'Fredericka the Great', cursive;
+        font-size: 15rem;
+        color: #ffffff;
+        line-height: 10rem;
+    }
 }
