--- a/yummy/css/checkOut.css
+++ b/yummy/css/checkOut.css
@@ -133,3 +133,25 @@ textarea.form-control{
     font-size: 1.8rem;
     margin-top: 2rem;
 }
+
+@media only screen and (max-width: 576px) {
+    .header_area {
+        background-image: url("../images/singerProduct_Page/banner.png");
+        height: auto; 
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+    }
+    .header_main{
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        font-family: 'Fredericka the Great', cursive;
+        font-size: 15rem;
+        color: #ffffff;
+        line-height: 10rem;
+    }
+    .form-check input{
+        
+    }
+}
