--- a/yummy/template/singerBlog.pug
+++ b/yummy/template/singerBlog.pug
@@ -83,15 +83,33 @@ section.section_1.container
 
     .col-3.left_area
       // Search form
-      form.form-inline.md-form.form-sm.active-cyan-2.mt-2
-        input.form-control.form-control-sm.mr-3.w-75(type='text' placeholder='Tìm kiếm' aria-label='Search')
-        i.fas.fa-search(aria-hidden='true')
+      .search_form TÌM KIẾM BÀI VIẾT
+        form.form-inline.md-form.form-sm.active-cyan-2.mt-2
+          input.form-control.form-control-sm.mr-3.w-75(type='text' placeholder='Tìm kiếm' aria-label='Search')
+          i.fas.fa-search(aria-hidden='true')
 
-      .about_us Về chúng tôi
+      .about_us BÀI VIẾT MỚI CẬP NHẬP
         hr
-        .text-center 
-            img(src='./images/singerBlog_page/author1.png' alt='image')
-        .intro Hello! My name is Karen. It’s so very nice to meet you. I happily share my passion for all things I cook.
+        ul.mt-search
+          li
+            a(href='') Hến sào me
+          li
+            a(href='') Yến sốt chua cay
+          li
+            a(href='') Thịt trâu sốt cà chua
+          li
+            a(href='') Mướp sào lòng lợn
+          li
+            a(href='') Ẩm thực quanh ta
+      .about_us DANH MỤC BÀI VIẾT
+        hr
+        ul.mt-search
+          li
+            a(href='') Tất cả bài viết
+          li
+            a(href='') Công thức nấu ăn
+          li
+            a(href='') Khám phá ẩm thực
     //-   .social_network Mạng xã hội
     //-     hr
 
