--- a/yummy/template/template-parts/mainMenu.pug
+++ b/yummy/template/template-parts/mainMenu.pug
@@ -6,15 +6,15 @@
       #navbarNavDropdown.collapse.navbar-collapse
         ul.navbar-nav
           li.nav-item
-            a.nav-link(href='index.html') TRANG CHỦ
+            a.page_1.nav-link(href='index.html') TRANG CHỦ
           li.nav-item
-            a.nav-link(href='about.html') GIỚI THIỆU
+            a.page_2.nav-link(href='about.html') GIỚI THIỆU
           li.nav-item
-            a.nav-link(href='menu.html') THỰC ĐƠN
+            a.page_3.nav-link(href='menu.html') THỰC ĐƠN
           li.nav-item
-            a.nav-link(href='blog.html') BÀI VIẾT
+            a.page_4.nav-link(href='blog.html') BÀI VIẾT
           li.nav-item
-            a.nav-link(href='shop.html') CỬA HÀNG
+            a.page_5.nav-link(href='shop.html') CỬA HÀNG
           li.nav-item-sp
             a.nav-link.nav-border(href='reservation.html') ĐẶT BÀN
           li.nav-item-sp
