--- a/yummy/css/about.css
+++ b/yummy/css/about.css
@@ -1,4 +1,7 @@
 /*------------Header-----------*/
+.menu-main .nav-item .page_2{
+  border-bottom: 1px solid #ffffff;
+}
 /* Banner */
 .header_area {
     background-image: url("../images/about_Page/banner.png");
