--- a/yummy/css/css_parts/footer.css
+++ b/yummy/css/css_parts/footer.css
@@ -61,8 +61,12 @@ textarea.form-control{
 .btn{
     background-color: #FD5B00;
     color: #ffffff;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     margin-top: 2rem;
+}
+.padding_form .btn:hover{
+    background-color: #B62A00;
+    color: #ffffff;
 }
 .bottom_left .logo{
     font-size: 6.4rem;
