--- a/yummy/css/main.css
+++ b/yummy/css/main.css
@@ -48,7 +48,7 @@ a, p{
     border-bottom: 3px solid #ffffff;
 }
 
-.menu-main .nav-item a:active{
+.menu-main .nav-item a:focus{
     border-bottom: 3px solid #ffffff;
 }
 
@@ -86,4 +86,4 @@ a, p{
     left: 0;
     width: 100%;
     height: 425px;
-    }
+}
