--- a/yummy/template/index.pug
+++ b/yummy/template/index.pug
@@ -54,18 +54,18 @@ section.section_1.chefs_info.container-fluid.row
           .carousel-item
             .chef_content.row
               .col-4.avatar_chef
-                img(src='images/home_Page/chef_small.png', alt='chef')
+                img(src='images/home_Page/chef_1.png', alt='chef')
               .col-8.name_chef
-                p.name Kano Kun
-                p.role Bếp trưởng
+                p.name Taro Yuki
+                p.role Bếp phó
             p.content Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!
           .carousel-item
             .chef_content.row
               .col-4.avatar_chef
-                img(src='images/home_Page/chef_small.png', alt='chef')
+                img(src='images/home_Page/chef_2.png', alt='chef')
               .col-8.name_chef
-                p.name Kano Kun
-                p.role Bếp trưởng
+                p.name Hana Yuki
+                p.role Bếp phó
             p.content Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!        
     .col-6.chef_image
       img(src='images/home_Page/chef_big.png', alt='chef')
@@ -82,7 +82,7 @@ section.section_2.gallery.container-fluid
         //-d-flex và flex-row 
         ul.navbar-nav.d-flex.flex-row
           li.nav-item
-            a.nav-link(href='#') TẤT CẢ
+            a.nav-link(href='shop.html') TẤT CẢ
           li.nav-item
             a.nav-link(href='#') THỊT
           li.nav-item
@@ -97,50 +97,50 @@ section.section_2.gallery.container-fluid
     .child-page-listing
       .grid-container
         article#3685.location-listing
-          a.location-title(href='#')
-            | Bít tết Wanju
-          .location-image
-            a(href='#')
-              img(width='300' height='169' src='images/home_Page/img1.jpg' alt='Xem chi tiết')
-        article#3685.location-listing
-          a.location-title(href='#')
-            | Bít tết Wanju
-          .location-image
-            a(href='#')
-              img(width='300' height='169' src='images/home_Page/img2.jpg' alt='Xem chi tiết')
-        article#3685.location-listing
-          a.location-title(href='#')
-            | Bít tết Wanju
-          .location-image
-            a(href='#')
-              img(width='300' height='169' src='images/home_Page/img3.jpg' alt='Xem chi tiết')
-        article#3685.location-listing
-          a.location-title(href='#')
-            | Bít tết Wanju
-          .location-image
-            a(href='#')
-              img(width='300' height='169' src='images/home_Page/img4.jpg' alt='Xem chi tiết')
-        article#3685.location-listing
-          a.location-title(href='#')
-            | Bít tết Wanju
-          .location-image
-            a(href='#')
-              img(width='300' height='169' src='images/home_Page/img5.jpg' alt='Xem chi tiết')
-        article#3685.location-listing
-          a.location-title(href='#')
-            | Bít tết Wanju
+          a.location-title(href='singerProduct.html')
+            | Bít tết bò Kobe 
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img6.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Bít tết Wanju
+            | Bánh mì 4 tê
+          .location-image
+            a(href='#')
+              img(width='300' height='169' src='images/home_Page/img2.jpg' alt='Xem chi tiết')
+        article#3685.location-listing
+          a.location-title(href='#')
+            | Kem sữa dừa
+          .location-image
+            a(href='#')
+              img(width='300' height='169' src='images/home_Page/img3.jpg' alt='Xem chi tiết')
+        article#3685.location-listing
+          a.location-title(href='#')
+            | Khoai tây chiên
+          .location-image
+            a(href='#')
+              img(width='300' height='169' src='images/home_Page/img4.jpg' alt='Xem chi tiết')
+        article#3685.location-listing
+          a.location-title(href='#')
+            | Xúc xích
+          .location-image
+            a(href='#')
+              img(width='300' height='169' src='images/home_Page/img5.jpg' alt='Xem chi tiết')
+        article#3685.location-listing
+          a.location-title(href='#')
+            | Dâu tây
+          .location-image
+            a(href='#')
+              img(width='300' height='169' src='images/home_Page/img1.jpg' alt='Xem chi tiết')
+        article#3685.location-listing
+          a.location-title(href='#')
+            | Cá hòi Châu Phi
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img7.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Bít tết Wanju
+            | Canh ngô hầm bí
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img8.jpg' alt='Xem chi tiết')
@@ -187,19 +187,19 @@ section.section_3.services.container
       .col-3.service
         img(src='./images/section3/Rectangle1.png' alt='')
         p.title Bữa Sáng
-        p.content Khởi động một ngày mới tràn đầy năng lượng
+        p.content Khởi động ngày mới tràn đầy năng lượng
       .col-3.service
         img(src='./images/section3/Rectangle2.png' alt='')
         p.title Bữa Trưa
-        p.content Khởi động một ngày mới tràn đầy năng lượng
+        p.content Tiếp tục một ngày tràn đầy năng lượng
       .col-3.service
         img(src='./images/section3/Rectangle3.png' alt='')
         p.title Bữa Tối
-        p.content Khởi động một ngày mới tràn đầy năng lượng
+        p.content Thưởng thức trọn vẹn món ăn
       .col-3.service
         img(src='./images/section3/Rectangle4.png' alt='')
         p.title Yêu Cầu
-        p.content Khởi động một ngày mới tràn đầy năng lượng
+        p.content Phục vụ theo yêu cầu của riêng bạn
 //section4      
 section.section_4.menu_restaurant.container-fuild
   div
@@ -215,42 +215,42 @@ section.section_4.menu_restaurant.container-fuild
             span.dish_info 150.000VND
           li
             span.dish_name Gà nướng ngũ vị hương
-            span.dish_info 150.000VND
+            span.dish_info 180.000VND
           li
             span.dish_name Gà cay phô mai
-            span.dish_info 150.000VND
+            span.dish_info 160.000VND
           li
             span.dish_name Trứng tráng rau củ
-            span.dish_info 150.000VND
+            span.dish_info 190.000VND
           li
             span.dish_name Sừng trâu hầm nhân sâm
-            span.dish_info 100.000VND
+            span.dish_info 120.000VND
           li
-            span.dish_name Sừng trâu hầm nhân sâm
+            span.dish_name Đuôi lươn xào tỏi ớt
             span.dish_info 100.000VND
 
       .col-6.dish
         ul.leaders
           li
-            span.dish_name Bít tết bò Kobe
+            span.dish_name Gà nướng khoai tây
             span.dish_info 150.000VND
           li
-            span.dish_name Gà nướng ngũ vị hương
+            span.dish_name Rau củ quả luộc
             span.dish_info 150.000VND
           li
-            span.dish_name Gà cay phô mai
+            span.dish_name Sushi nướng
             span.dish_info 150.000VND
           li
-            span.dish_name Trứng tráng rau củ
+            span.dish_name Cải thảo xào me
             span.dish_info 150.000VND
           li
-            span.dish_name Sừng trâu hầm nhân sâm
+            span.dish_name Phô mai que
             span.dish_info 100.000VND
           li
-            span.dish_name Sừng trâu hầm nhân sâm
+            span.dish_name gác bếp nhân xâm
             span.dish_info 100.000VND
   div.text-center.btn_detail
-    button.btn.btn-dark(type='button') Xem chi tiết
+    button.btn.btn-dark(type='submit' formaction='menu.html') Xem chi tiết
 //footer
 include template-parts/footer.pug
 
