--- a/yummy/template/singerBlog.pug
+++ b/yummy/template/singerBlog.pug
@@ -8,8 +8,12 @@ head
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
   // fontAweSome
   link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous')
+  //slick
+  link(rel='stylesheet' type='text/css' href='js/slick/slick.css')
+  // Add the new slick-theme.css if you want the default styling
+  link(rel='stylesheet' type='text/css' href='js/slick/slick-theme.css')
   // icon
-  link(rel='icon' href='images/favicon.ico')
+  link(rel='icon' href='images/core_img/favicon.ico')
   // Fonts
   link(rel='stylesheet' type='text/css' media='screen' href='css/stylesheet.css')
   link(href="https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Poppins|Prata&display=swap" rel="stylesheet")
@@ -18,6 +22,7 @@ head
   link(rel='stylesheet' type='text/css' media='screen' href='css/singerBlog.css')
   link(rel='stylesheet' type='text/css' media='screen' href='css/css_parts/topHeader.css')
   link(rel='stylesheet' type='text/css' media='screen' href='css/css_parts/mainMenu.css')
+  link(rel='stylesheet' type='text/css' media='screen' href='css/css_parts/footer2.css')
   link(rel='stylesheet' type='text/css' media='screen' href='css/css_parts/footer.css')
 header.header_area.container-fluid
   //Top Header Area
@@ -31,18 +36,20 @@ section.section_1.container
     .col-9.right_area
       div.post.container
         p.post_tag.text-center CÔNG THỨC NẤU ĂN
-        p.post_title.text-center BÀO NGƯ HẤP CHANH TÂY
-        p.post_subtitle.text-center Ngày 8 /9/2018, by NhatMinh, 2 bình luận
+        p.post_title.text-center BÒ BÍT TẾT KOBE
+        p.post_subtitle.text-center Ngày 8 /9/2018, by  
+          a.author NhatMinh
+          |, 1 bình luận
         div.post_image.text-center
           img(src='./images/singerBlog_page/blog1.jpg' alt='image')
         div
-          p.post_content How did the hand pies look? Did you love the brownies? How many choux did you eat in one sitting? Yes, these are the things I think about. So today, after creating a gorgeous selection of our favorites for a client to send as a new year’s gift, I was given a gift of my own: direct feedback from the recipients of the pastries. I was so happy, I had to share it with you.
-          p.post_content So here it is, you loving what we love. Maybe I don’t know where to look for spicy food in Europe, or maybe my idea of spicy differs from the palate here, but I’ve noticed that there’s a decided lack of spicy heat on this side of the pond. I haven’t turned into one of those spice monsters that travel around with ghost chilli pepper flakes in their pocket, but I do appreciate that tingly burn you get when digging in to a perfectly spicy dish.
+          p.post_content Đặt miếng thịt lên trên một mặt phẳng sạch, rắc thêm chút muối và hạt tiêu lên bề mặt thịt, sau đó dùng búa nhỏ hoặc chày đập nhẹ để thịt bò mềm hơn. Lật mặt kia lại và cũng làm tương tự. Lưu ý, bạn đập nhẹ nhàng để thịt mềm và thấm gia vị, tránh làm mạnh tay kẻo thịt bị nát.
+          p.post_content Cho 2 muỗng cà phê dầu ăn, 1 muỗng cà phê hạt tiêu, 1 muỗng cà phê dầu hào và chút tỏi băm vào một cái chén, trộn thật đều. Đỗ hỗn hợp gia vị trên lên miếng thịt bò, dùng tay thoa đều hỗn hợp lên cả 2 mặt thịt. Bọc kín khay thịt lại rồi ướp trong khoảng 1 – 2 tiếng cho thịt thấm gia vị. Trong thời gian này bạn tranh thủ sơ chế các nguyên liệu khác.
         div.post_image.text-center
           img(src='./images/singerBlog_page/blog2.jpg' alt='image')
         div
-          p.post_content How did the hand pies look? Did you love the brownies? How many choux did you eat in one sitting? Yes, these are the things I think about. So today, after creating a gorgeous selection of our favorites for a client to send as a new year’s gift, I was given a gift of my own: direct feedback from the recipients of the pastries. I was so happy, I had to share it with you.
-          p.post_content So here it is, you loving what we love. Maybe I don’t know where to look for spicy food in Europe, or maybe my idea of spicy differs from the palate here, but I’ve noticed that there’s a decided lack of spicy heat on this side of the pond. I haven’t turned into one of those spice monsters that travel around with ghost chilli pepper flakes in their pocket, but I do appreciate that tingly burn you get when digging in to a perfectly spicy dish.
+          p.post_content Khoai tây rửa sạch, cạo vỏ rồi rửa lại lần nữa, thái khoai thành các thanh dài nhỏ vừa ăn (như trong hình). Bạn nấu sôi một nồi nước pha chút muối, sau đó cho khoai tây vào luộc trong khoảng thời gian 2 – 3 phút rồi vớt ra, để ráo.
+          p.post_content Bắc chảo lên bếp với lượng dầu ăn vừa đủ để chiên khoai, khi dầu nóng già thì bạn cho khoai tây vào chiên chín vàng.  Khi khoai chín vàng, bạn vớt hết ra ngoài cho ráo dầu rồi chiên tiếp lần 2, cách này sẽ giúp khoai tây giòn lâu hơn.
         hr
       .author.row
         .col-2
@@ -50,7 +57,7 @@ section.section_1.container
             img(src='./images/singerBlog_page/author1.png' alt='image')
         .col-10
           p.author_name Nhat Minh
-          p.info Did you love the brownies? How many choux did you eat in one sitting? Yes, these are the things I think about. So today, after creating a gorgeous selection of our favorites for a client to send as a new year's gift, I was given a gift of my own: direct feedback from the recipients of the pastries.
+          p.info Hướng dẫn cách làm bò bít tết ngon tại nhà bằng 6 bước thực hiện, ăn kèm khoai tây chiên và salad rất hấp dẫn. Với cách làm này, món bò bít tết sốt tiêu với phần thịt bò ngon mềm, khoai tây chiên béo ngậy cùng đĩa salad thanh mát chống ngán sẽ làm người thưởng thức rất thích thú.
           .view_all
             a(href="#") Xem thêm bài viết của Nhat Minh
         hr
@@ -58,25 +65,25 @@ section.section_1.container
         hr
         .row 
           .col-2.avatar_comter
-            img(src='./images/singerBlog_page/author1.png' alt='image') 
+            img(src='./images/singerBlog_page/sontung.png' alt='image') 
           .col-10.form_comment
             .vote
             .name_comment Sơn Tùng M-TP
             .date_comment 8/8/2019
-            .content_comment Vivamus orci sem, consectetur ut stibulum a, semper ac dui. Proin aliquam mi nec hendrerit. Sed entum velit vel ip bibendum tristique. Orci sem, consectetur ut stibulum a, semper ac dui. Proin aliquam mi nec hendrerit. Sed entum velit vel ip bibendum tristique.
+            .content_comment Rất cảm ơn tác giả vì bài viết rất hay và tâm huyết. Mình đã làm theo và đã có người yêu nhờ món ăn nay. Thank you very much!
 
         hr
         .post_comment Để lại đánh giá của bạn
             .row
                 .col-6.form-group
                     label(for='') Tên
-                    input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp' placeholder='Enter email')
+                    input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp' placeholder='Nhập tên của bạn')
                 .col-6.form-group
                     label(for='') Email
-                    input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp' placeholder='Enter email')
+                    input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp' placeholder='Nhập địa chỉ Email')
             .form-group
                 label(for='') Bình luận của bạn
-                textarea#exampleFormControlTextarea1.form-control(rows='3')
+                textarea#exampleFormControlTextarea1.form-control(rows='3' placeholder='Để lại bình luận của bạn')
             .text-right
                 button.btn(type='submit') Hoàn thành
 
@@ -118,11 +125,15 @@ section.section_1.container
 
 
 //footer
-include template-parts/footer.pug
+include template-parts/footer2.pug
 
 // Optional JavaScript
 // jQuery first, then Popper.js, then Bootstrap JS
-script(type='text/javascript' src='js/script.js')
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
 script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
+// slick
+script(type='text/javascript' src='js/slick/slick.min.js')
+
+script(type='text/javascript' src='js/script.js')
+script(type='text/javascript' src='./js/footer2.js')
