--- a/yummy/template/template-parts/topHeader.pug
+++ b/yummy/template/template-parts/topHeader.pug
@@ -1,18 +1,39 @@
 // Top header
-.top_header_area.container-fuild
-      -//Chú ý dòng này nè, fix lỗi khá hay đấy, thừa padding các kiểu
-      .row.container
-        .col-5.col-sm-5
-          // icon
-          .top_social_bar
-            a(href='#')
-              i.fab.fa-facebook(aria-hidden='true')
-            a(href='#')
-              i.fab.fa-twitter(aria-hidden='true')
-            a(href='#')
-              i.fab.fa-linkedin(aria-hidden='true')
-            a(href='#')
-              i.fab.fa-skype(aria-hidden='true')
-            a(href='#')
-              i.fab.fa-dribbble(aria-hidden='true')
-        .col-7.col-sm-7
+//- .top_header_area.container-fuild
+//-       -//Chú ý dòng này nè, fix lỗi khá hay đấy, thừa padding các kiểu
+//-       .row.container
+//-         .col-5.col-sm-5
+//-           // icon
+//-           .top_social_bar
+//-             a(href='#')
+//-               i.fab.fa-facebook(aria-hidden='true')
+//-             a(href='#')
+//-               i.fab.fa-twitter(aria-hidden='true')
+//-             a(href='#')
+//-               i.fab.fa-linkedin(aria-hidden='true')
+//-             a(href='#')
+//-               i.fab.fa-skype(aria-hidden='true')
+//-             a(href='#')
+//-               i.fab.fa-dribbble(aria-hidden='true')
+//-         .col-7.col-sm-7
+.top.navbar.text-white
+  .container-fluid.top-content
+    ul.nav.top-left
+      li.nav-item
+        span.fas.fa-map-marker-alt
+        |  Tây Hồ Hà Nội
+      li.nav-item.mr-menu
+        span.fas.fa-mobile-alt
+        | 0366312255
+    ul.nav.top-right
+      .top_social_bar
+        a(href='#')
+          i.fab.fa-facebook(aria-hidden='true')
+        a(href='#')
+          i.fab.fa-twitter(aria-hidden='true')
+        a(href='#')
+          i.fab.fa-linkedin(aria-hidden='true')
+        a(href='#')
+          i.fab.fa-skype(aria-hidden='true')
+        a(href='#')
+          i.fab.fa-dribbble(aria-hidden='true')
